fixed up controls to use proper z-indexing

--- a/public/common/css/controls.css
+++ b/public/common/css/controls.css
@@ -1,6 +1,7 @@
 #squeenote_controls {
   position: absolute;
   top: 0; left: 0;
+  z-index: 10000;
   width: 100%;
   font-size: 16px;
   background: #111;
